--- a/DSirius/Views/MessageCell.xib
+++ b/DSirius/Views/MessageCell.xib
@@ -25,17 +25,25 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="uQe-lS-nGj">
                         <rect key="frame" x="10" y="10" width="394" height="137"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="You" translatesAutoresizingMaskIntoConstraints="NO" id="FQr-B7-CnN">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="DJ1-By-8v9"/>
+                                    <constraint firstAttribute="height" constant="40" id="Txy-V6-S8h"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="hNF-1n-c9V"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHx-z9-UwZ">
-                                <rect key="frame" x="0.0" y="0.0" width="334" height="133"/>
+                                <rect key="frame" x="60" y="0.0" width="274" height="133"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bWV-uH-K0r">
-                                        <rect key="frame" x="10" y="10" width="314" height="113"/>
+                                        <rect key="frame" x="10" y="10" width="254" height="113"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" name="BrandRed"/>
+                                <color key="backgroundColor" name="BrandBlueBubble"/>
                                 <constraints>
                                     <constraint firstItem="bWV-uH-K0r" firstAttribute="top" secondItem="OHx-z9-UwZ" secondAttribute="top" constant="10" id="crN-PF-HHz"/>
                                     <constraint firstAttribute="trailing" secondItem="bWV-uH-K0r" secondAttribute="trailing" constant="10" id="eBn-79-kDz"/>
@@ -52,10 +60,10 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" name="BackgroundColor"/>
+                        <color key="backgroundColor" name="BackgroundColorApp"/>
                     </stackView>
                 </subviews>
-                <color key="backgroundColor" name="BackgroundColor"/>
+                <color key="backgroundColor" name="BackgroundColorApp"/>
                 <constraints>
                     <constraint firstItem="uQe-lS-nGj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="GjF-5c-H3V"/>
                     <constraint firstAttribute="bottom" secondItem="uQe-lS-nGj" secondAttribute="bottom" constant="10" id="J2Y-rY-1PI"/>
@@ -66,6 +74,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="label" destination="bWV-uH-K0r" id="Qgs-OV-QDp"/>
+                <outlet property="leftImageView" destination="FQr-B7-CnN" id="NdT-Fw-9Av"/>
                 <outlet property="messageBubble" destination="OHx-z9-UwZ" id="uVA-yh-Jnq"/>
                 <outlet property="rightImageView" destination="Ew3-Uc-B7Z" id="oRS-dH-m5V"/>
             </connections>
@@ -74,11 +83,12 @@
     </objects>
     <resources>
         <image name="Me" width="133" height="133"/>
-        <namedColor name="BackgroundColor">
+        <image name="You" width="133" height="133"/>
+        <namedColor name="BackgroundColorApp">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="BrandRed">
-            <color red="0.92199999094009399" green="0.093999996781349182" blue="0.32899999618530273" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="BrandBlueBubble">
+            <color red="0.21568627450980393" green="0.65098039215686276" blue="0.89411764705882346" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
