--- a/DSirius/Views/Base.lproj/Main.storyboard
+++ b/DSirius/Views/Base.lproj/Main.storyboard
@@ -321,7 +321,7 @@
                                         <rect key="frame" x="0.0" y="115.5" width="414" height="197"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GaF-at-GJx">
-                                                <rect key="frame" x="178" y="117" width="58" height="39"/>
+                                                <rect key="frame" x="178" y="117" width="61" height="39"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="39" id="LYj-ee-kp7"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="hZC-IK-zGX"/>
@@ -408,7 +408,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="8bc-Ni-Bgi"/>
+        <segue reference="YqK-HK-Z5j"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" name="NavBarItems"/>
     <resources>
